[app] 不限制 jvm 堆的最大内存，避免出现 oom；兼容 JDK 17；修复 AdamDeviceManager 重试逻辑无效的问题；